; ModuleID = '/home/carl/AnghaBench/linux/net/unix/extr_garbage.c_wait_for_unix_gc.c'
source_filename = "/home/carl/AnghaBench/linux/net/unix/extr_garbage.c_wait_for_unix_gc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@unix_tot_inflight = common dso_local global i64 0, align 8
@UNIX_INFLIGHT_TRIGGER_GC = common dso_local global i64 0, align 8
@gc_in_progress = common dso_local global i32 0, align 4
@unix_gc_wait = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wait_for_unix_gc() #0 {
  %1 = load i64, i64* @unix_tot_inflight, align 8
  %2 = load i64, i64* @UNIX_INFLIGHT_TRIGGER_GC, align 8
  %3 = icmp sgt i64 %1, %2
  br i1 %3, label %4, label %9

4:                                                ; preds = %0
  %5 = load i32, i32* @gc_in_progress, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %9, label %7

7:                                                ; preds = %4
  %8 = call i32 (...) @unix_gc()
  br label %9

9:                                                ; preds = %7, %4, %0
  %10 = load i32, i32* @unix_gc_wait, align 4
  %11 = load i32, i32* @gc_in_progress, align 4
  %12 = icmp eq i32 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @wait_event(i32 %10, i32 %13)
  ret void
}

declare dso_local i32 @unix_gc(...) #1

declare dso_local i32 @wait_event(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
